--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     name: Build iOS App
     max_build_duration: 60 # in minutes
     environment:
-      xcode: "15.0" # укажите нужную версию Xcode
+      xcode: "14.0" # укажите нужную версию Xcode
       vars:
         MY_ENV_VAR: "some_value" # добавьте необходимые переменные окружения
     scripts:
@@ -17,4 +17,4 @@ workflows:
           xcodebuild -workspace YourApp.xcworkspace -scheme YourApp -sdk iphoneos -configuration AppStoreDistribution archive -archivePath $CM_BUILD_DIR/YourApp.xcarchive
           xcodebuild -exportArchive -archivePath $CM_BUILD_DIR/YourApp.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath $CM_BUILD_DIR
     artifacts:
-      - path: $CM_BUILD_DIR/YourApp.ipa
+      - $CM_BUILD_DIR/YourApp.ipa
