--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,8 +1,13 @@
-version: 2.0
-jobs:
-  build:
+version: 2.1
+executors:
+  ios-executor:
     docker:
       - image: circleci/python:3.8
+    working_directory: ~/project
+
+jobs:
+  build:
+    executor: ios-executor
     steps:
       - checkout
       - run:
@@ -38,6 +43,7 @@ jobs:
             xcodebuild -exportArchive -archivePath $CM_BUILD_DIR/Pyto.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath $CM_BUILD_DIR
       - store_artifacts:
           path: $CM_BUILD_DIR/Pyto.ipa
+
 workflows:
   version: 2
   build_and_test:
